# ncr-rs

./: Cargo.toml  README.md
src/: aes_key.rs  lib.rs  utils.rs
src/encoding/: base64.rs  base64r.rs  mc256.rs  mod.rs  sus16.rs
src/encryption/: caesar.rs  cfb8.rs  ecb.rs  gcm.rs  mod.rs
