[package]
name = "ncr"
description = "Rust implementation of chat encryption in the Minecraft mod No Chat Reports"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/ALaggyDev/ncr-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.9.0-rc.1", optional = true }
aes-gcm = { version = "0.11.0-rc.1", optional = true }
base64 = "0.22"
cfb8 = { version = "0.9.0-rc.1", optional = true }
cipher = { version = "0.5.0-rc.1", optional = true, features = ["alloc","block-padding",] }
hmac = { version = "0.13.0-rc.1", optional = true }
pbkdf2 = { version = "0.13.0-rc.1", optional = true, default-features = false }
phf = "0.13.1"
rand = "0.10.0-rc.0"
sha1 = { version = "0.11.0-rc.2", optional = true }

[features]
default = ["passphrase"]
passphrase = ["dep:pbkdf2", "dep:hmac", "dep:sha1"]
cfb8 = ["dep:aes", "dep:cfb8"]
ecb = ["dep:aes", "dep:cipher"]
gcm = ["dep:aes", "dep:aes-gcm"]

# Docs.rs specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Workaround to make "cargo test" works without enabling features manually
[dev-dependencies]
ncr = { path = "./", features = ["cfb8", "ecb", "gcm"] }
